manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: website
 namespace: nixlabs
spec:
 selector:
   matchLabels:
     app: website
 template:
   metadata:
     labels:
       app: website
   spec:
     containers:
       - name: website
         image: ghcr.io/nixlabs-dev/website:0707ca5ddae2118e1059aed1455d81cf9691bb0c
         ports:
           - name: web
             containerPort: 80
     imagePullSecrets:
       - name: ghcr
