manifests/service.yml
apiVersion: v1
kind: Service
metadata:
 name: website
 namespace: nixlabs
spec:
 ports:
   - name: web
     port: 80
     targetPort: web
 selector:
   app: website
