manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: website
 namespace: nixlabs
 annotations:
   cert-manager.io/issuer: "le-production"
spec:
 tls:
   - hosts:
       - nixlabs.dev
     secretName: tls-website-ingress-http
 rules:
   - host: nixlabs.dev
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: website
               port:
                 name: web
